<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kozinthet.testapplication.TwoActivity">

    <TextView
        android:id="@+id/sleep_well"
        android:text="@string/sleep_well"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="20dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/eat_well"
        android:text="@string/eat_well"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/keep_well"
        android:text="@string/keep_well"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/well_done"
        android:text="@string/well_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_ok"
        android:text="@string/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_call"
        android:text="@string/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center" />
</LinearLayout>
